@@ -12,10 +12,8 @@ s0_fade_mode = 1
 s0_fade_time = 1
 
 [grid]
-s0_animation_duration = 1
+s0_animation_duration = 0
 s0_draw_stretched_window = false
-s0_outline_color = #fb8b00ff
-s0_fill_color = #fb8b00c8
 
 [resize]
 s0_mode = 2
