@@ -512,7 +512,7 @@ GridScreen::glPaintRectangle (const GLScreenPaintAttrib &sAttrib,
 	Animation& anim = *iter;
 
 	float curve = powf (CURVE_ANIMATION, -anim.progress);
-	float alpha = (optionGetFillColorAlpha () / MaxUShortFloat) * anim.opacity;
+	float alpha = blend ? (optionGetFillColorAlpha () / MaxUShortFloat) * anim.opacity : 0.85;
 	color = optionGetFillColor ();
 
 	colorData[0] = alpha * color[0];
@@ -550,7 +550,7 @@ GridScreen::glPaintRectangle (const GLScreenPaintAttrib &sAttrib,
 				      anim.currentRect.height () - 2);
 
 	/* draw outline */
-	alpha = (optionGetOutlineColorAlpha () / MaxUShortFloat) * anim.opacity;
+	alpha = blend ? (optionGetOutlineColorAlpha () / MaxUShortFloat) * anim.opacity : 1;
 	color = optionGetOutlineColor ();
 
 	colorData[0] = alpha * color[0];
@@ -583,7 +583,7 @@ GridScreen::glPaintRectangle (const GLScreenPaintAttrib &sAttrib,
     if (!animating)
     {
 	/* draw filled rectangle */
-	float alpha = optionGetFillColorAlpha () / MaxUShortFloat;
+	float alpha = blend ? optionGetFillColorAlpha () / MaxUShortFloat : 0.85;
 	color = optionGetFillColor ();
 
 	colorData[0] = alpha * color[0];
@@ -865,7 +865,7 @@ GridScreen::handleEvent (XEvent *event)
 		    animations.at (current).fromRect = w->serverBorderRect ();
 		    animations.at (current).currentRect	= w->serverBorderRect ();
 		    animations.at (current).duration = optionGetAnimationDuration ();
-		    animations.at (current).timer = animations.at (current).duration;
+		    animations.at (current).progress = 0.0f;
 		    animations.at (current).targetRect = desiredSlot;
 		    animations.at (current).window = w->id();
 
@@ -1179,18 +1179,24 @@ GridScreen::preparePaint (int msSinceLastPaint)
     for (iter = animations.begin (); iter != animations.end (); ++iter)
     {
 	Animation& anim = *iter;
-	anim.timer -= msSinceLastPaint;
+	GLfloat msSinceLastPaintFloat = static_cast<GLfloat>(msSinceLastPaint);
+	GLfloat animDurationFloat = static_cast<GLfloat>(anim.duration);
+	GLfloat progress_delta = 1.0f;
 
-	if (anim.timer < 0)
-	    anim.timer = 0;
+	if (animDurationFloat > 0.0f)
+	    progress_delta = msSinceLastPaintFloat / animDurationFloat;
 
 	if (anim.fadingOut)
-	    anim.opacity -= msSinceLastPaint * 0.002;
+	{
+	    anim.opacity -= progress_delta;
+	}
 	else
+	{
 	    if (anim.opacity < 1.0f)
 		anim.opacity = anim.progress * anim.progress;
 	    else
 		anim.opacity = 1.0f;
+	}
 
 	if (anim.opacity < 0)
 	{
@@ -1199,10 +1205,10 @@ GridScreen::preparePaint (int msSinceLastPaint)
 	    anim.complete = true;
 	}
 
-	anim.progress =	(anim.duration - anim.timer) / anim.duration;
+	anim.progress = std::min<GLfloat>(anim.progress + progress_delta, 1.0);
     }
 
-    if (optionGetDrawStretchedWindow ())
+    if (optionGetDrawStretchedWindow () && !optionGetDisableBlend ())
     {
 	CompWindow *cw = screen->findWindow (CompOption::getIntOptionNamed (o, "window"));
 
@@ -1272,7 +1278,6 @@ Animation::Animation ()
     targetRect = CompRect (0, 0, 0, 0);
     currentRect = CompRect (0, 0, 0, 0);
     opacity = 0.0f;
-    timer = 0.0f;
     duration = 0;
     complete = false;
     fadingOut = false;
@@ -1380,7 +1385,7 @@ GridWindow::glPaint (const GLWindowPaintAttrib& attrib, const GLMatrix& matrix,
     {
 	Animation& anim = *iter;
 
-	if (anim.timer > 0.0f && anim.window == window->id())
+	if (anim.progress < 1.0f && anim.window == window->id())
 	{
 	    GLWindowPaintAttrib wAttrib(attrib);
 	    GLMatrix wTransform (matrix);
